--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-netlify-identity-widget": "^1.1.1",
     "gatsby-plugin-purgecss": "^6.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-recaptcha": "^1.0.5",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-remark-copy-linked-files": "^5.0.0",
